gateway-api/httpbin-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: httpbin
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    hostname: "httpbin.example.com" 
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
